Fix T97733: Crash when adding new scene

Caused by NULL dereference if sequencer data does not exist.